fix(AsideElement): spacing top and bottom

--- a/packages/styles/scss/components/content-block-media/_content-block-media.scss
+++ b/packages/styles/scss/components/content-block-media/_content-block-media.scss
@@ -22,6 +22,9 @@
     .#{$prefix}--content-group:last-child {
       margin-bottom: 0;
     }
+    .#{$prefix}--feature-card-block-medium {
+      margin-bottom: 0;
+    }
   }
 
   .#{$prefix}--content-block-media--g100 {
